# oak_hackathon

./: .gitignore  README.md  setup.cfg  setup.py
notebooks/: App.ipynb  Process_student_data.ipynb  Using_ai_functions.ipynb  personalised_schedule_app.ipynb
oak_data/: Example_student_marks.xlsx  thread_to_unit_mapping.json  unit_weights.csv  units_to_threads.json  year8_units.json
src/oak_hackaton/: settings.py  utils.py
src/oak_hackaton/api/: utils.py
src/oak_hackaton/extraction/: utils.py
src/oak_hackaton/frontend/: streamlit_app.py
src/oak_hackaton/generation/: ai.py
