[metadata]
name = oak_hackathon
description = This is a project for the Oak Hackathon
author = Oak Hackathon Team
author-email = alex.ivanov@faculty.ai
url = https://github.com/PhantomSpike/oak_hackathon

[options]
zip_safe = False
packages = find:
include_package_data = True
setup_requires = setuptools_scm
package_dir =
    =src
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    requests==2.32.3

[options.packages.find]
where = src
